<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/backgroundqu3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textSize="38dp"
        tools:text="KataQu"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350sp"
        app:cardBackgroundColor="#E3E3E3"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/pengalaman"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>


<!--    <TextView-->
<!--        android:layout_width="325sp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/pengalaman"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/tvQuote"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/judul"-->
<!--        app:layout_constraintVertical_bias="0.266" />-->

    <TextView
        android:id="@+id/tvQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/judul"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/quote" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/tvQuote"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/author" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/btnAllQuotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/show_list_quotes"
        android:drawableRight="@drawable/baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>